Terminado la parte de estudios

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             </header>
             <div class="cuerpo">
                 <div class="columna1">
+                    <article style="width: 100%;" alt="Perfil">
+                        <div class="texto_general">
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>PERFIL
+                            </p>
+                            <p style="line-height: 1.5; font-size:larger; margin-top: 30px;">Soy técnico en Sistemas Microinformáticos y Redes con experiencia práctica en la reparación y mantenimiento de dispositivos, adquirida durante mi formación y prácticas en un instituto. Posteriormente, trabajé durante más de un año como operario en la fabricación, pulido y ensamblaje de armarios eléctricos, desarrollando habilidades técnicas y de trabajo en equipo. Actualmente, estoy cursando el Grado Superior de Desarrollo de Aplicaciones Multiplataforma, con el objetivo de especializarme en el diseño y desarrollo de soluciones tecnológicas innovadoras.</p>
+                        </div>
+                    </article>
                     <article style="width: 100%;" alt="Experiencia Laboral">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
@@ -51,53 +59,19 @@
                             </ul>
                         </div>
                     </article>
-                    <article style="width: 100%; height: 40%;" alt="Educacion">
+                    <article style="width: 100%; height: 33.8%;" alt="EDUCACION">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>HABILIDADES
+                                <span style="margin-right: 50px;">☆</span>EDUCACION
                             </p>
-                            <table style="width: 100%; border-collapse: collapse;">
-                                <tr>
-                                  <td style="text-align: left;padding: 15px 0;">MANEJO DE HERRAMIENTAS Y MAQUINARIA:</td>
-                                  <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                </tr>
-                                <tr>
-                                    <td style="text-align: left;padding: 15px 0;">CONTROL DE CALIDAD</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">MONTAJE Y ENSAMBLAJE</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">ADAPTABILIDAD</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">DISEÑO Y PROGRAMACION DE TECNOLOGÍA</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">SEGURIDAD LABORAL</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">PENSAMIENTO CRÍTICO Y ANALISIS</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">TRABAJO EN EQUIPO</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">CREATIVIDAD E ORIGINALIDAD</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                                  <tr>
-                                    <td style="text-align: left;padding: 15px 0;">RESPONSABILIDAD Y COMPROMISO</td>
-                                    <td style="text-align: right;padding: 15px 0;">HOMBRE</td>
-                                  </tr>
-                            </table>
+                            <h2 style="margin-bottom: 5px;margin-top: 30px;">FP GRADO MEDIO DE SISTEMAS MICROINFORMÁTICOS Y REDES</h2>
+                            <p style="margin: 0; font-size: 16px;">INSTITUTO ESTEVE TERRADAS</p>
+                            <p style="margin: 0; color: gray; font-size: 14px;">Sep 2020 - Jun 2022 | Carrer Bonavista, 70, 08940, Cornellà de Llobregat, Barcelona</p>
+                            <p style="margin-top: 10px;">Me licencie en técnico microinformático y redes, me especializo en hacer mantenimiento y configuración tanto Software y Hardware.</p>
+                            <h2 style="margin-bottom: 5px;margin-top: 30px;">FP GRADO SUPERIOR DE DESARROLLO DE APLICACIONES MULTIPLATAFORMA</h2>
+                            <p style="margin: 0; font-size: 16px;">LA SALLE GRÀCIA</p>
+                            <p style="margin: 0; color: gray; font-size: 14px;">Sep 2024 - PRESENTE | Carrer Bonavista, 70, 08940, Cornellà de Llobregat, Barcelona</p>
+                            <p style="margin-top: 10px;">"Actualmente estoy cursando un Grado Superior en Desarrollo de Aplicaciones Multiplataforma (DAM), donde estoy adquiriendo conocimientos en programación, diseño de software y desarrollo de aplicaciones para diferentes sistemas operativos."</p>
                         </div>
                     </article>
                 </div>
@@ -131,19 +105,53 @@
                               </table>
                         </div>
                     </article>
-                    <article style="width: 100%;" alt="Perfil">
+                    <article style="width: 100%; height: 40%;" alt="Educacion">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>PERFIL
+                                <span style="margin-right: 50px;">☆</span>HABILIDADES
                             </p>
-                            <p style="line-height: 1.5; font-size:larger; margin-top: 30px;">Soy técnico en Sistemas Microinformáticos y Redes con experiencia práctica en la reparación y mantenimiento de dispositivos, adquirida durante mi formación y prácticas en un instituto. Posteriormente, trabajé durante más de un año como operario en la fabricación, pulido y ensamblaje de armarios eléctricos, desarrollando habilidades técnicas y de trabajo en equipo. Actualmente, estoy cursando el Grado Superior de Desarrollo de Aplicaciones Multiplataforma, con el objetivo de especializarme en el diseño y desarrollo de soluciones tecnológicas innovadoras.</p>
-                        </div>
-                    </article>
-                    <article style="width: 100%; height: 33.8%;" alt="Habilidades">
-                        <div class="texto_general">
-                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>EDUCACION
-                            </p>
+                            <table style="width: 100%; border-collapse: collapse;">
+                                <tr>
+                                    <td style="text-align: left;padding: 15px 0;">CREATIVIDAD E ORIGINALIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★★★</td>
+                                  </tr>
+                                <tr>
+                                  <td style="text-align: left;padding: 15px 0;">MANEJO DE HERRAMIENTAS Y MAQUINARIA:</td>
+                                  <td style="text-align: right;padding: 15px 0;">★★★★☆</td>
+                                </tr>
+                                <tr>
+                                    <td style="text-align: left;padding: 15px 0;">CONTROL DE CALIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★★☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">MONTAJE Y ENSAMBLAJE</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★★☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">ADAPTABILIDAD</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★★☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">DISEÑO Y PROGRAMACION DE TECNOLOGÍA</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★★☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">SEGURIDAD LABORAL</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★☆☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">PENSAMIENTO CRÍTICO Y ANALISIS</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★☆☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">TRABAJO EN EQUIPO</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★★☆☆</td>
+                                  </tr>
+                                  <tr>
+                                    <td style="text-align: left;padding: 15px 0;">RESPONSABILIDAD Y COMPROMISO</td>
+                                    <td style="text-align: right;padding: 15px 0;">★★☆☆☆</td>
+                                  </tr>
+                            </table>
                         </div>
                     </article>
                 </div>
