--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                               </table>
                         </div>
                     </article>
-                    <article style="width: 100%; height: 40%;" alt="Educacion">
+                    <article style="width: 100%;" alt="Educacion">
                         <div class="texto_general">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>HABILIDADES
@@ -154,6 +154,12 @@
                             </table>
                         </div>
                     </article>
+                    <article style="width: 100%; height: 40%;" alt="Educacion">
+                        <div class="texto_general">
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>IDIOMAS
+                            </p>
+                        </div>
                 </div>
             </div>
         </div>
