cREACION DE LA TABLA DE IDIOMAS Y DECORACION DE LOS ARTICULOS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="cuerpo">
                 <div class="columna1">
                     <article style="width: 100%;" alt="Perfil">
-                        <div class="texto_general">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>PERFIL
                             </p>
@@ -41,7 +41,7 @@
                         </div>
                     </article>
                     <article style="width: 100%;" alt="Experiencia Laboral">
-                        <div class="texto_general">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>EXPERIENCIA LABORAL
                             </p>
@@ -60,7 +60,7 @@
                         </div>
                     </article>
                     <article style="width: 100%; height: 33.8%;" alt="EDUCACION">
-                        <div class="texto_general">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>EDUCACION
                             </p>
@@ -76,8 +76,33 @@
                     </article>
                 </div>
                 <div class="columna2">
+                    <article style="width: 100%;" alt="IDIOMAS">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
+                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
+                                <span style="margin-right: 50px;">☆</span>IDIOMAS
+                            </p>
+                            <section style="padding: 20px;">
+                                <div style="margin-bottom: 15px;">
+                                    <span style="font-size: 18px; font-weight: bold;">Castellano:</span>
+                                    <span style="font-size: 18px;">Alto</span>
+                                </div>
+                                <div style="margin-bottom: 15px;">
+                                    <span style="font-size: 18px; font-weight: bold;">Catalán:</span>
+                                    <span style="font-size: 18px;">Alto</span>
+                                </div>
+                                <div style="margin-bottom: 15px;">
+                                    <span style="font-size: 18px; font-weight: bold;">Inglés:</span>
+                                    <span style="font-size: 18px;">Medio</span>
+                                </div>
+                                <div style="margin-bottom: 15px;">
+                                    <span style="font-size: 18px; font-weight: bold;">Francés:</span>
+                                    <span style="font-size: 18px;">Bajo</span>
+                                </div>
+                            </section>
+                        </div>
+                    </article> 
                     <article style="width: 100%;" alt="Informacion Adicional">
-                        <div class="texto_general">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>INFORMACION ADICIONAL
                             </p>
@@ -106,7 +131,7 @@
                         </div>
                     </article>
                     <article style="width: 100%;" alt="Educacion">
-                        <div class="texto_general">
+                        <div class="texto_general" style="box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 20px;">
                             <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
                                 <span style="margin-right: 50px;">☆</span>HABILIDADES
                             </p>
@@ -153,13 +178,7 @@
                                   </tr>
                             </table>
                         </div>
-                    </article>
-                    <article style="width: 100%; height: 40%;" alt="Educacion">
-                        <div class="texto_general">
-                            <p style="font-size: 25px;border-bottom: solid black 1px;margin-top: 25px;">
-                                <span style="margin-right: 50px;">☆</span>IDIOMAS
-                            </p>
-                        </div>
+                    </article>   
                 </div>
             </div>
         </div>
