Terminado el CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="esqueleto">
             <header class="contenedor1">
                 <div class="div1">
-                    <img src="Imagenes/vegeta.jpg" alt="Foto CV">
+                    <img src="Imagenes/Icono_CV.jpg" alt="Foto CV">
                 </div>
                 <div class="div2">
                     <div class="cuadrado">
@@ -181,6 +181,12 @@
                     </article>   
                 </div>
             </div>
+            <footer>
+                <div class="contenedor2">
+                    <div class="triangulo-arriba">
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 </body>
